--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <section class="bg-dark" id="section3">
         <div class="container col-12 container-service text-white">
             <h2 class="text-center"><span style="color: rgb(0, 234, 255);"><strong>My</span> Services</strong></h2>
-            <div class="container-cards d-flex align-items-center">
+            <div class="container-cards d-flex align-items-center justify-content-center">
                 <div class="card m-5 bg-dark border rounded rounded-3 text-white"
                     style="width: 18rem; border-color: rgb(0, 234, 255) !important;">
                     <i class="fa-solid fa-laptop-code fa-5x py-3 text-center"></i>
